# habit_tracker_api

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/configs/: database.py  settings.py
app/exceptions/: base.py  checkin.py
app/models/: __init__.py  checkin.py  habit.py
app/routers/: checkin.py  habit.py
app/schemas/: checkin.py  habit.py
app/services/: checkin.py  habit.py
migrations/models/: 0_20260207191557_init.py  1_20260315153004_update.py
tests/: conftest.py  test_habit.py
tests/factories/: habit_factory.py
