[project]
name = "habit-tracker-api"
version = "0.1.0"
description = ""
authors = [
    {name = "alnbastos",email = "alinebastos23@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "fastapi[standard] (>=0.128.4,<0.129.0)"
]

[tool.poetry]
packages = [{include = "habit_tracker_api", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
